--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:background="@drawable/curved_background"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:elevation="10dp">
 
         <TextView
             android:id="@+id/tvBienvenido"
