--- a/app/src/main/res/layout/fragment_edificacion_detail.xml
+++ b/app/src/main/res/layout/fragment_edificacion_detail.xml
@@ -5,7 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E9E9E9"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:id="@+id/mapa_edificio_container"
+    >
+
 
     <!-- Encabezado con botón de retroceso, nombre de usuario y perfil -->
     <LinearLayout
@@ -129,6 +132,18 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Comentar"
+            android:backgroundTint="#006666"
+            android:textColor="#F5F5F5"
+            android:textSize="14sp"
+            android:drawablePadding="8dp"
+            android:layout_marginEnd="8dp"/>
+
+        <Button
+            android:id="@+id/btnMostrarMapa"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Mostrar mapa"
             android:backgroundTint="#006666"
             android:textColor="#F5F5F5"
             android:textSize="14sp"
