Boton para mostrar el plano

--- a/app/src/main/res/layout/fragment_edificacion_detail.xml
+++ b/app/src/main/res/layout/fragment_edificacion_detail.xml
@@ -139,11 +139,11 @@
             android:layout_marginEnd="8dp"/>
 
         <Button
-            android:id="@+id/btnMostrarMapa"
+            android:id="@+id/btnMostrarPlano"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Mostrar mapa"
+            android:text="Mostrar plano"
             android:backgroundTint="#006666"
             android:textColor="#F5F5F5"
             android:textSize="14sp"
