--- a/app/src/main/res/layout/edificio_map_fragment.xml
+++ b/app/src/main/res/layout/edificio_map_fragment.xml
@@ -5,10 +5,18 @@
     android:layout_height="match_parent"
     tools:context=".fragments.EdificioMapFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <Button
+        android:id="@+id/btn_volver"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Volver"
+        android:layout_gravity="top|start"
+        android:layout_margin="16dp" />
+
+    <com.example.myapplication.views.EdificioView
+        android:id="@+id/edificioView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_marginTop="56dp" />
 
 </FrameLayout>
